--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "prettier --check . & ng lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lighthouse": "lhci autorun"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +32,7 @@
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.10",
     "@eslint/js": "^9.13.0",
+    "@lhci/cli": "^0.14.0",
     "@types/bootstrap": "^5.2.10",
     "@types/eslint__js": "^8.42.3",
     "@types/eslint-config-prettier": "^6.11.3",
